Spacing issues-Small Screen
Fixed the spacing so it’s not so excessive. :)

--- a/css/custom.css
+++ b/css/custom.css
@@ -229,8 +229,8 @@ display:inline;
 @media only screen and (max-width: 40em) {
 #about {
 	background-size: 12.5em;
-	padding:0 0 9.375em 0;
-	background-position-y: 1450px;
+	padding:0 0 9.375em 2em;
+	background-position-y: 1420px;
 	background-position-x: 108px;
 }
 .hero {
@@ -291,6 +291,16 @@ label {
 	top: 2em;
 	padding:0 0 0 .6em;
 	}
+#about-spacing {
+	margin-bottom: 2rem;
+}
+#quote-spacing-section {
+	margin-top: 2rem;
+}
+.section-margin {
+	margin-bottom: 10rem;
+	padding: 2em;
+}
 
 }
 
